<resources>
    <string name="app_name">Pace Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_quit">Quit</string>
    <string name="stopwatch_default">00:00:00</string>
    <string name="next_button">Next Drink</string>
    <string name="finish_time_default">00:00</string>
    <string name="finish_time_label">What time do you want to finish?</string>
    <string name="target_label">How many drinks do you want?</string>
    <string name="start_button_text">Start Session</string>
    <string name="title_activity_complete">Complete</string>
    <string name="start_again">Start Again</string>
    <string name="complete_text">Session finished</string>
    <string name="complete">Complete</string>
</resources>
